--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
+
     <title>Chawanrak</title>
 </head>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+</style>
 
 <body>
     <nav class="navbar navbar-expand-sm" style="background: #F4EBFF;">
@@ -22,10 +26,10 @@
 
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" style="color: #6C0000;" href="javascript:void(0)">Home</a>
+                        <a class="nav-link" style="color: #6C0000;" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" style="color: #6C0000;" href="javascript:void(0)">Resume</a>
+                        <a class="nav-link" style="color: #6C0000;" href="resume.html">Resume</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" style="color: #6C0000;" href="javascript:void(0)">Community</a>
@@ -39,18 +43,32 @@
             </div>
         </div>
     </nav>
+
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+        <!-- The slideshow/carousel -->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="img/a3.jpg" class="w-100" height="500px" width="">
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         <div class="bg1">
             <div class="row">
-                <div class="col-2"></div>
                 <div class="col-8">
-                    <h1>I won’t cry for you. My mascara’s too expensive.</h1>
-                    <img src="img/a3.jpg" id="bg1">
-                   
-                    <div class="col-2"></div>
+                    <div class="txt1">
+
+                        <h1>I won’t cry for you. My mascara’s too expensive.</h1>
+                        <button class="btn text-white" type="button" style="background-color: #390082;">Join Today</button>
+                    </div>
+                    <br>
+                  
                 </div>
             </div>
         </div>
+    </div>
 
 </body>
 
