--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
 </style>
 
 <body>
@@ -39,7 +40,7 @@
                     </li>
                 </ul>
 
-                <button class="bt1" type="button">Login</button>
+                <button class="btn text-white" type="button" style="background-color: #390082;">Login</button>
             </div>
         </div>
     </nav>
@@ -59,16 +60,67 @@
             <div class="row">
                 <div class="col-8">
                     <div class="txt1">
-
                         <h1>I won’t cry for you. My mascara’s too expensive.</h1>
-                        <button class="btn text-white" type="button" style="background-color: #390082;">Join Today</button>
+                        <button class="btn text-white" type="button" style="background-color: #390082;">Join
+                            Today</button>
                     </div>
                     <br>
-                  
+
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="txt2">
+                    Snap photos and share like never before
+                </h1>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+                <img src="img/a4.jpg" alt="" srcset="" id="img1" class="rounded-circle">
+                <h2 style="font-family: 'Nerko One', cursive;">
+                    Nemo enim ipsam
+                </h2>
+                <h4 style="font-family: 'Nerko One', cursive;">
+                    Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor.
+                </h4>
+                <h3 id="txt3">
+                    Learn more
+                </h3>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+                <img src="img/a5.jpg" alt="" srcset="" id="img1" class="rounded-circle">
+                <h2 style="font-family: 'Nerko One', cursive;">
+                    Nemo enim ipsam
+                </h2>
+                <h4 style="font-family: 'Nerko One', cursive;">
+                    Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor.
+                </h4>
+                <h3 id="txt3">
+                    Learn more
+                </h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-sm-12">
+                <img src="img/a6.png" alt="" srcset="" class="rounded" id="img2" >
+            </div>
+            <div class="col-lg-6 col-sm-12">
+                <h2 style="font-family: 'Nerko One', cursive; margin-top: 120px;">
+                    Sed ut perspiciatis unde omnis
+                </h2>
+                <h4 style="font-family: 'Nerko One', cursive;">
+                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
+                </h4>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
