--- a/resume.html
+++ b/resume.html
@@ -1,12 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style2.css">
+    <title>Resume</title>
 </head>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nerko+One&display=swap');
+</style>
+
 <body>
-    
+    <div class="container-fluid">
+        <div id="bg1">
+            <h1 id="txt1">Resume</h1>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-6 col-sm-12 margin-top: 120px;">
+                <img src="img/me.JPG" alt="" srcset="" class="rounded" id="img1">
+            </div>
+            <div class="col-lg-6 col-sm-12">
+                <h2 id="txt2">
+                    Chawanrak
+                    Phiabunchophu
+                    Fang
+                </h2>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div id="bg1">
+            <h1 id="txt3">Contact</h1>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row ">
+            <div class="col-6 ">
+                <div class="col-lg-4 col-sm-12 ">
+                    <img src="img/p.png" alt="" srcset="" id="img2" class="float-start">
+                </div>
+                <div class="col-lg-8 col-sm-12">
+                    <h2 id="txt4">093-312-1105</h2>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="col-lg-4 col-sm-12 ">
+                    <img src="img/ig.png" alt="" srcset="" id="img2" class="float-start">
+                </div>
+                <div class="col-lg-8 col-sm-12">
+                    <h2 id="txt4">fangg244</h2>
+                </div>
+            </div>
+
+            <div class="col-6 ">
+                <div class="col-lg-4 col-sm-12 ">
+                    <img src="img/mail.png" alt="" srcset="" id="img2" class="float-start">
+                </div>
+                <div class="col-lg-8 col-sm-12">
+                    <h2 id="txt4">fang001fang001@gmail.com</h2>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="col-lg-4 col-sm-12 ">
+                    <img src="img/fb.png" alt="" srcset="" id="img2" class="float-start">
+                </div>
+                <div class="col-lg-8 col-sm-12">
+                    <h2 id="txt4">Fang Chawanrak</h2>
+                </div>
+            </div>
+
+            <div class="col-6 ">
+                <div class="col-lg-4 col-sm-12 ">
+                    <img src="img/lo.png" alt="" srcset="" id="img2" class="float-start">
+                </div>
+                <div class="col-lg-8 col-sm-12">
+                    <h2 id="txt4">House No.50/1 Moo.3 Soi.1/1 
+                        City,MaeHia,Chiang Mai
+                        </h2>
+                </div>
+            </div>
+            <div class="col-6">
+            </div>
+
+        </div>
+    </div>
+
 </body>
+
 </html>
