--- a/index.html
+++ b/index.html
@@ -7,117 +7,136 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-
-    <title>Chawanrak</title>
+    <link rel="stylesheet" href="style2.css">
+    <title>Resume</title>
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nerko+One&display=swap');
 </style>
 
 <body>
-    <nav class="navbar navbar-expand-sm" style="background: #F4EBFF;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="javascript:void(0)"><img src="img/a1.png" height="40px" width="40px"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse " id="mynavbar">
+    <div class="container-fluid">
+        <div id="bg1">
+            <h1 id="txt1">Resume</h1>
+        </div>
+    </div>
 
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" style="color: #6C0000;" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" style="color: #6C0000;" href="resume.html">Resume</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" style="color: #6C0000;" href="javascript:void(0)">Community</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " style="color: #6C0000;" href="javascript:void(0)">support</a>
-                    </li>
-                </ul>
-
-                <button class="btn text-white" type="button" style="background-color: #390082;">Login</button>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-6 col-sm-12 margin-top: 120px;">
+                <img src="img/me.JPG" alt="" srcset="" class="rounded" id="img1">
+            </div>
+            <div class="col-lg-6 col-sm-12">
+                <h2 id="txt2">
+                    Chawanrak
+                    Phiabunchophu
+                    Fang
+                </h2>
             </div>
         </div>
-    </nav>
-
-    <div id="demo" class="carousel slide" data-bs-ride="carousel">
-
-        <!-- The slideshow/carousel -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/a3.jpg" class="w-100" height="500px" width="">
-            </div>
+    </div>
+    <div class="container-fluid">
+        <div id="bg1">
+            <h1 id="txt3">Contact</h1>
         </div>
     </div>
 
     <div class="container">
-        <div class="bg1">
-            <div class="row">
-                <div class="col-8">
-                    <div class="txt1">
-                        <h1>I won’t cry for you. My mascara’s too expensive.</h1>
-                        <button class="btn text-white" type="button" style="background-color: #390082;">Join
-                            Today</button>
-                    </div>
-                    <br>
-
+        <div class="row ">
+            <div class="col-6  ">
+                <div class="col-lg-4 col-sm-12 ">
+                    <img src="img/p.png" alt="" srcset="" id="img2" class="float-start">
+                </div>
+                <div class="col-lg-8 col-sm-12">
+                    <h2 id="txt4">093-312-1105</h2>
                 </div>
             </div>
+            <div class="col-6">
+                <div class="col-lg-4 col-sm-12 ">
+                    <img src="img/ig.png" alt="" srcset="" id="img2" class="float-start">
+                </div>
+                <div class="col-lg-8 col-sm-12">
+                    <h2 id="txt4">fangg244</h2>
+                </div>
+            </div>
+
+            <div class="col-6 ">
+                <div class="col-lg-4 col-sm-12 ">
+                    <img src="img/mail.png" alt="" srcset="" id="img2" class="float-start">
+                </div>
+                <div class="col-lg-8 col-sm-12">
+                    <h2 id="txt4">fang001fang001@gmail.com</h2>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="col-lg-4 col-sm-12 ">
+                    <img src="img/fb.png" alt="" srcset="" id="img2" class="float-start">
+                </div>
+                <div class="col-lg-8 col-sm-12">
+                    <h2 id="txt4">Fang Chawanrak</h2>
+                </div>
+            </div>
+
+            <div class="col-6 ">
+                <div class="col-lg-4 col-sm-12 ">
+                    <img src="img/lo.png" alt="" srcset="" id="img2" class="float-start">
+                </div>
+                <div class="col-lg-8 col-sm-12">
+                    <h2 id="txt4">House No.50/1 Moo.3 Soi.1/1 City,MaeHia,Chiang Mai
+                    </h2>
+                </div>
+            </div>
+            <div class="col-6">
+            </div>
+
         </div>
     </div>
-
+    <div class="container-fluid">
+        <div id="bg1">
+            <h1 id="txt3">About Me</h1>
+        </div>
+    </div>
     <div class="container">
-        <div class="row">
+        <div class="row ">
             <div class="col-12">
-                <h1 class="txt2">
-                    Snap photos and share like never before
-                </h1>
+                <h2 id="txt4">Gender : Female</h2>
             </div>
-            <div class="col-lg-6 col-sm-12">
-                <img src="img/a4.jpg" alt="" srcset="" id="img1" class="rounded-circle">
-                <h2 style="font-family: 'Nerko One', cursive;">
-                    Nemo enim ipsam
-                </h2>
-                <h4 style="font-family: 'Nerko One', cursive;">
-                    Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor.
-                </h4>
-                <h3 id="txt3">
-                    Learn more
-                </h3>
+            <div class="col-12">
+                <h2 id="txt4">Date of brith : 24 / 04 / 46</h2>
             </div>
-            <div class="col-lg-6 col-sm-12">
-                <img src="img/a5.jpg" alt="" srcset="" id="img1" class="rounded-circle">
-                <h2 style="font-family: 'Nerko One', cursive;">
-                    Nemo enim ipsam
-                </h2>
-                <h4 style="font-family: 'Nerko One', cursive;">
-                    Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor.
-                </h4>
-                <h3 id="txt3">
-                    Learn more
-                </h3>
+            <div class="col-12">
+                <h2 id="txt4">Marital Status : Single</h2>
             </div>
+
         </div>
     </div>
 
+    <div class="container-fluid">
+        <div id="bg1">
+            <h1 id="txt3">Education</h1>
+        </div>
+    </div>
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-sm-12">
-                <img src="img/a6.png" alt="" srcset="" class="rounded" id="img2" >
+        <div class="row ">
+            <div class="col-12">
+                <h2 id="txt4">2009 - 2014 : Puttisopon School</h2>
             </div>
-            <div class="col-lg-6 col-sm-12">
-                <h2 style="font-family: 'Nerko One', cursive; margin-top: 120px;">
-                    Sed ut perspiciatis unde omnis
-                </h2>
-                <h4 style="font-family: 'Nerko One', cursive;">
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
-                </h4>
+            <div class="col-12">
+                <h2 id="txt4">2015 - 2017 : Chiangmai Thepbodint School</h2>
             </div>
+            <div class="col-12">
+                <h2 id="txt4">2018 - 2020 : LANNA POLYTECHNIC CHIANGMAI</h2>
+            </div>
+            <div class="col-12">
+                <h2 id="txt4">2021 - 2022 : LANNA POLYTECHNIC CHIANGMAI</h2>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div id="bg1">
+
+            <center><button class="btn text-white" id="bu1" type="button"> <a href="home.html">Next</a></button></center>
         </div>
     </div>
 
